--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,8 @@ dune_pybindxi_install_python_package(PATH python)
 include_dependent_binary_python_dirs()
 
 # install jinja2 for code generation into the dune-python virtualenv
-execute_process(COMMAND ${DUNE_PYTHON_VIRTUALENV_EXECUTABLE} -m pip install jinja2 pytest-cov ipywidgets)
+execute_process(COMMAND ${DUNE_PYTHON_VIRTUALENV_EXECUTABLE} -m pip install jinja2 pytest-cov ipywidgets k3d xmljson
+                        vtk lxml loguru)
 
 add_subdirectory(python)
 
