--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ add_subdirectory(dune)
 add_subdirectory("cmake/modules")
 add_subdirectory(doc/doxygen)
 
+add_tidy(${CMAKE_CURRENT_SOURCE_DIR})
 add_pylicense()
 
 finalize_dune_project(GENERATE_CONFIG_H_CMAKE)
