[cmake] fix name clash after install

--- a/cmake/modules/CMakeLists.txt
+++ b/cmake/modules/CMakeLists.txt
@@ -32,4 +32,5 @@ install(
         Hints.cmake
         XtCompilerSupport.cmake
         XtTooling.cmake
+        versioneer.py
   DESTINATION ${DUNE_INSTALL_MODULEDIR})
